# SIGINT

./: README.md
backend/: .gitignore  README.md  app.py  requirements.txt  run_backend.bat
rust/: .gitignore  Cargo.toml  build_lib.bat  company_ids.json  service_uuids.json  update_databases.py
rust/src/: db.rs  lib.rs  main.rs  models.rs  scanner.rs  sync.rs  utils.rs
