[package]
name = "sigint"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# do not update this dep, because it will break the JNI interface
jni = "0.19.0"
btleplug = "0.12.0"
tokio = { version = "1.51.0", features = ["full", "signal"] }
futures = "0.3.32"
uuid = { version = "1.23.0", features = ["serde"] }
colored = "3.1.1"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
once_cell = "1.21.4"
log = "0.4"
android_logger = "0.15.1"
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
hex = "0.4.3"
hostname = "0.4.2"

[[bin]]
name = "sigint_cli"
path = "src/main.rs"
